products/edge/4.1/usecase-security-lake/index.md
# Amazon Security Lake Integration


Cribl Edge supports sending data to [Amazon Security Lake](https://docs.aws.amazon.com/security-lake/latest/userguide/what-is-security-lake.html) as Parquet files that adhere to the [Open Cybersecurity Schema Framework](https://docs.aws.amazon.com/security-lake/latest/userguide/open-cybersecurity-schema-framework.html) (OCSF). The diagram below illustrates the all-AWS variant of this architecture.

![Integrating Cribl Edge with Amazon Security Lake](security-lake-integ-01.492a97ba6a.png)
{border="true"}

This guide walks you through an example where Cribl Edge, running in [Cribl.Cloud](deploy-cloud), sends Palo Alto Networks logs to Amazon Security Lake. The workflow starts with a Cribl Edge [Syslog Source](sources-syslog), which ingests the Palo Alto data and routes it to a Cribl Edge [Amazon Security Lake Destination](destinations-security-lake), which then writes Parquet files to Amazon Security Lake. These Parquet files organize the data according to the OCSF schema for the appropriate OCSF Event Class, in this case [Network Activity](https://schema.ocsf.io/classes/network_activity) [4001].

You can work with other data sources besides Palo Alto Networks, and other OCSF Event Classes besides Network Activity [4001]. See [Going Beyond This Example](#going-beyond) below.

If you want to use Amazon Security Lake with a Cribl Edge instance deployed on-prem or in your private cloud, the setup procedures will differ from those documented here. Please contact Cribl via the `#packs` channel of Cribl Community Slack.

## Setting Up Amazon Security Lake {#set-up-security-lake}

Complete the Amazon Security Lake Getting Started [instructions](https://docs.aws.amazon.com/security-lake/latest/userguide/getting-started.html), paying particular attention to the following actions: 

1. Enable Amazon Security Lake for your AWS account.
1. Define the **collection objective** and **target objective**.
1. Select the regions where you want to create S3 buckets to store the data in OCSF format.

Note your Amazon Security Lake S3 bucket name for use later in the setup process. 

## Setting Up Cribl Edge {#set-up-stream}

Complete the procedures in this section before doing anything else in Cribl Edge.

First, find and note the Amazon Resource Name (ARN) that enables AWS to locate your Cribl Edge instance.

1. Log in to Cribl.Cloud to open the [Portal Page](deploy-cloud#workspaces).
1. In the top nav, click **Network Settings** and open the **Trust** tab.
1. Click the copy icon next to the **Worker ARN**, and paste the ARN into a local text editor.
1. Copy the 12-digit number in the middle of the ARN. This is the AWS Account ID you'll need [later](#create-custom-source) in the setup process.

For example: 
* If your ARN is `arn:aws:iam::222233334444:role/main-default`, then ...
* Your AWS Account ID will be `222233334444`.

Next, install the Cribl Pack that Cribl Edge will use to send data to Amazon Security Lake in the required OCSF format. (As the [reference](#data-sources) shows, the Palo Alto Networks data chosen for this example requires the **OCSF Post Processor Pack**.)

1. In the top nav, click **Cribl.Cloud** to return to the Portal Page. 
1. Click **Manage Stream** or **Manage Edge** to open the **Fleets** page.
1. Click the name of the Fleet whose Edge Nodes you want to send data to Amazon Security Lake. (For this example, we'll use the `default` Fleet.) This takes you to the **Manage** > **Overview** page.
1. Navigate to **Processing** > **Packs** and click **Add Pack**.
1. From the drop-down, select **Add from Dispensary**, click the tile for the **OCSF Post Processor** Pack, and click **Add Pack**.

In a moment you should see the newly added Pack at the bottom of the list of Packs.

Finally, you will need the Parquet schema that supports the OCSF Event Class you're working with. In this example, that's OCSF Event Class 4001. As the reference [below](#data-sources) shows, the corresponding Parquet schema is `OCSF 4001 Network Activity`.

* In the [Parquet schemas area of the Cribl Packs Dispensary](https://github.com/criblpacks/cribl-ocsf-parquet-schemas/), open the folder for the version of OCSF that your Pack uses – in this example, OCSF version `1.0.0-rc3`.
* Download the desired Parquet schema – in this example, `OCSF 4001 Network Activity 1.0.0-rc.3.json`.
* Then, upload the schema to the Cribl Edge Parquet schema library as described [here](parquet-schemas#creating-parquet-schemas).

Once this is done, the Parquet schema you need should be available when you configure the **Parquet Settings** for your Cribl Edge Amazon Security Lake Destination.

Please post any questions you have about these procedures to the `#packs` channel of Cribl Community Slack.

## Creating an Amazon Security Lake Custom Source {#create-custom-source}

Because Cribl is not a native Amazon service, you'll configure what Amazon calls a **Security Lake custom source**, and the Cribl Edge Amazon Security Lake Destination will write to that.

Before you begin:
1. Have your Cribl.Cloud AWS account ID, which you identified [earlier](#set-up-stream), handy.
1. Ensure that  you have permissions in AWS Lake Formation to create AWS Glue databases and tables. For more information, see [Granting and revoking permissions using the named resource method](https://docs.aws.amazon.com/lake-formation/latest/dg/granting-cat-perms-named-resource.html) in the AWS docs.

Then complete the instructions [here](https://docs.aws.amazon.com/security-lake/latest/userguide/custom-sources.html#custom-sources-best-practices) in the AWS docs. These docs will take you through the **Create custom data source** template show below.

![Creating an Amazon Security Lake custom source](security-lake-integ-02.a8f29a0a2e.png)
{border="true"}

Once you have created the custom source, navigate (still in AWS) to **Security Lake** > **Custom sources**. You should see your new custom source in the list.

Now locate the **Provider role ARN**. This is the ARN that Cribl Edge will use to declare its role to AWS.
1. Click the copy icon next to the **Provider role ARN** to add it to your clipboard. Keep the ARN handy for use later in the setup process.
1. Navigate to the **Identity and Access Management (IAM)** screen. 
1. From the left menu, select **Access management** > **Roles**.
1. In the **Roles** search box, paste the part of the ARN that begins `AmazonSecurityLake` and ends with the region.
1. When the role name appears below, click the link.
1. In the **Trust relationships** tab, view the `ExternalId` element in the JSON object that appears there.

This is the External ID for the trust relationship, which you created when went through the template. You will need this ID later in the setup process.

## Creating a Cribl Amazon Security Lake Destination {#create-security-lake-destination}

Back in Cribl Edge, create a new Amazon Security Lake Destination in the Routing UI as described in the Destination [topic](destinations-security-lake). In the **New Destination** modal, configure the settings specified below. For all settings **not** mentioned in the following notes, you can keep the defaults.

#### General Settings

**S3 Bucket name**: The S3 bucket name you noted when [setting Up Amazon Security Lake](#set-up-security-lake).

**Region**: Select the region where the S3 bucket is located.

##### Optional Settings

**File name prefix expression**: Keep the default (`CriblOut`) if it satisfies your requirements; otherwise, edit to suit your needs.

#### Authentication

**Authentication method** must be set to `Auto` (the default).

#### Assume Role

Cribl strongly recommends using the **Auto** authentication method in conjunction with the **Assume Role** settings as described below. Both Cribl and Amazon discourage the use of other approaches.

**AssumeRole ARN**: This is the **Provider role ARN** you copied after [creating](#create-custom-source) your custom source in Amazon Security Lake.

**External ID**: Enter the ID that you specified when [creating](#create-custom-source) your Amazon Security Lake custom source.

#### Processing Settings

##### Post-Processing

**Pipeline**: From the drop-down, select the Pack you installed [earlier](#set-up-stream): 
```
PACK Cribl-OCSF-Post-Processor (OCSF Post Processor)
```

**System fields**: Remove any fields specified here.

#### Parquet Settings

**Parquet schema**: From the drop-down, select `OCSF 4001 Network Activity 1.0.0-rc.3`, since OCSF Event Class 4001 describes the events coming from Palo Alto Networks in this example.

At this point, you can click **Save**; the defaults for **Advanced Settings** should work fine for this example. Then, **Commit** and **Deploy**.

> You must create one Cribl Edge Amazon Security Lake Destination for **each unique pairing** of a data source with an OCSF Event Class.
> * In this example, we're ingesting Palo Alto Networks Threat and Traffic data, which requires the OCSF [Network Activity](https://schema.ocsf.io/1.0.0-rc.2/classes/network_activity) [4001] Event Class. That's one pairing.
> * If you also wanted to ingest CrowdStrike Network Activity data, that would be a new data source paired with the same OCSF Event Class – i.e., **that would be a second unique pairing**. You would need to create a **separate** Cribl Edge Amazon Security Lake Destination for that pairing.
> 
> The [reference](#data-sources) below shows all the possible pairings of data sources and OCSF Event Classes.
>
{.box .info}

## Connecting a Cribl Source to the S3 Destination

We'll now configure a Cribl Edge Syslog Source to ingest Palo Alto Networks system logs, using the QuickConnect UI. (The [reference](#data-sources) below shows what Cribl Edge Source to use for each supported data source.)

Navigate to QuickConnect as described [here](sources-syslog#configuring-product-to-receive-data-over-syslog). After clicking the Syslog Source tile, click **Select Existing**, then click the preconfigured `in_syslog` Source. When prompted to `Switch in_syslog to send to QuickConnect instead of Routes?`, click `Yes`.

Click **+** and drag the connection line to the S3 Destination you created [above](#create-security-lake-destination).

The connection between the Syslog Source and the S3 Destination should now be enabled.

**Commit** and **Deploy** the changes.

## Sending Data to Amazon Security Lake

Return to your AWS Console. You should see Parquet files landing in the S3 bucket. These files should contain the Palo Alto Networks syslog data you sent through Cribl Edge.

#### Troubleshooting and Testing

Good things to double-check:
* Are you sending the events to your Amazon Security Lake in Parquet format? 
* Are your permissions set properly for your IAM role to write to the S3 bucket?

If the answer to either question is "No," your data will not make it into Amazon Security Lake. 

To send sample events from the GitHub repo, using netcat:
1. Download the `oYLbFU.json` [sample file](https://github.com/asc-me-cribl/cribl_ocsf_postprocessing/blob/main/data/samples/oYLbFU.json).
1. Run the following command, replacing `<cribl_org_id>` with your Cribl.Cloud [Organization ID](deploy-cloud#organization): 

```shell
cat oYLbFU.json | nc in.main-default-<cribl_org_id>.cribl.cloud 10070
```

## Going Beyond This Example {#going-beyond}

If you want to send data from sources other than Palo Alto Networks, you can adapt the above instructions to use the appropriate Source and Pack (and/or modifications to the OCSF Post Processor Pack) in Cribl Edge. This holds true as long as the OCSF Event Classes you want to work with are among those supported by Cribl Edge. For each unique pairing of a data source with an OCSF Event Class, you'll need to create a separate Amazon Security Lake Destination.

The Reference below lists supported data sources along with the OCSF Event Classes they handle, and the Packs and Parquet schemas you need to work with them.

## Reference: Supported Data Sources {#data-sources}

| Data Source | OCSF Event Classes Handled | Cribl Source | Cribl Pack Display Name | Parquet Schema(s) |
| ----------- | ----------- | ----------- | ----------- | ----------- |
| Azure Audit Logs | 3002, 3004 | [REST Collector](/stream/collectors-rest) against Microsoft Graph API  | Azure Audit Logs to OCSF | `OCSF 3002 Authentication` <br /><br /> `OCSF 3004 Entity Management` | 
| Azure NSG Flow Logs | 4001 | [Azure Blob Storage Source](/stream/sources-azure-blob), run as scheduled jobs, not as a Pull Source | Azure NSG Flow Logs | `OCSF 4001 Network Activity` |
| Cisco ASA | 4001 | [Syslog](sources-syslog) | Cisco ASA | `OCSF 4001 Network Activity` | 
| Cisco FTD | 4001 | [Syslog](sources-syslog) | Cisco FTD | `OCSF 4001 Network Activity` | 
| CrowdStrike Account Change | 3001 | [CrowdStrike FDR](/stream/sources-crowdstrike) | Crowdstrike FDR Pack | `OCSF 3001 Account Change` | 
| CrowdStrike Authentication | 3002 | [CrowdStrike FDR](/stream/sources-crowdstrike)  | Crowdstrike FDR Pack | `OCSF 3002 Authentication` | 
| CrowdStrike Network Activity | 4001 | [CrowdStrike FDR](/stream/sources-crowdstrike)  | Crowdstrike FDR Pack | `OCSF 4001 Network Activity` |
| GCP Audit Logs Account Activity | 3001 | [Google Cloud Pub/Sub](/stream/sources-google_pubsub) | Google Cloud Audit Logs | `OCSF 3001 Account Change` |
| Palo Alto Networks (PAN) Threat and Traffic | 4001 | [Syslog](sources-syslog) | OCSF Post Processor Pack | `OCSF 4001 Network Activity` |
| SentinelOne | 1001, 2001, 3002, 4001 | [Amazon S3](/stream/sources-s3) | SentinelOne Cloud Funnel | `OCSF 1001 File System Activity` <br /><br /> `OCSF 2001 Security Finding` <br /><br /> `OCSF 3002 Authentication` <br /><br /> `OCSF 4001 Network Activity` |
| Windows Logon Activity | 3002 | [Splunk TCP](sources-splunk) | Splunk Forwarder Windows Classic Events to OCSF | `OCSF 3002 Authentication` |
| ZScaler Firewall and Weblogs | 4001 | [Syslog](sources-syslog) | OCSF Post Processor Pack | `OCSF 4001 Network Activity` |
